@@ -1,3 +1,10 @@
+2022-02-24  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* Makefile.{am,in}, uptex-vf.test,
+	testdata/Makefile_upjf, testdata/upjv{,-r,-g}.tfm,
+	testdata/upjf.{tex,dvi,map}, testdata/upjv_{full,omit}.vf:
+	Add a new test for upTeX vertical writing.
+
 2022-01-22  Tomas Rokicki  <rokicki@gmail.com>
 	
 	* dvips.c (landscaperotate): define new global for new option.
